[STREAMPIPES-507] Protect map widget from too much data

--- a/ui/src/app/data-explorer/components/widgets/map/map-widget.component.html
+++ b/ui/src/app/data-explorer/components/widgets/map/map-widget.component.html
@@ -15,12 +15,25 @@
   ~ limitations under the License.
   ~
   -->
-  <div fxFlex="100" fxLayoutAlign="center center" fxLayout="column" class="main-panel">
-    <div [ngStyle]="{'width': mapWidth + 'px', 'height': mapHeight + 'px'}"
-         leaflet
-         [leafletOptions]="options"
-         (leafletMapReady)="onMapReady($event)">
-        <div *ngFor="let layer of layers" [leafletLayer]="layer"></div>
+
+<div fxFlex="100" fxLayoutAlign="center center" fxLayout="column" class="main-panel">
+
+    <sp-load-data-spinner *ngIf="showIsLoadingData" class="h-100"></sp-load-data-spinner>
+
+    <sp-no-data-in-date-range *ngIf="showNoDataInDateRange" [viewDateRange]="timeSettings"></sp-no-data-in-date-range>
+
+    <sp-too-much-data
+            [amountOfEvents]="amountOfTooMuchEvents"
+            (loadDataWithTooManyEventsEmitter)="loadDataWithTooManyEvents()"
+            *ngIf="showTooMuchData"></sp-too-much-data>
+
+    <div *ngIf="showData">
+        <div [ngStyle]="{'width': mapWidth + 'px', 'height': mapHeight + 'px'}"
+             leaflet
+             [leafletOptions]="options"
+             (leafletMapReady)="onMapReady($event)">
+            <div *ngFor="let layer of layers" [leafletLayer]="layer"></div>
+        </div>
     </div>
 </div>
 
