[STREAMPIPES-507] Increase number of maximum events for widget

--- a/ui/src/app/data-explorer/components/panel/data-explorer-dashboard-panel.component.html
+++ b/ui/src/app/data-explorer/components/panel/data-explorer-dashboard-panel.component.html
@@ -39,7 +39,7 @@
                 mat-raised-button
                 color="accent"
                 class="edit-menu-btn"
-                (click)="createW()"
+                (click)="createWidget()"
                 [disabled]="!editMode"
                 data-cy="add-new-widget">
             <i class="material-icons">add</i>
