[hotfix] Modify path of logo

--- a/ui/src/app/info/about/about.component.html
+++ b/ui/src/app/info/about/about.component.html
@@ -20,7 +20,7 @@
      class="about-container">
     <div fxFlex="50" fxLayoutAlign="center center" fxLayout="column"
          style="color:white;"><img
-            alt="icon" src="assets/img/login/logo.png" class="about-logo">
+            alt="icon" src="assets/img/sp/logo.png" class="about-logo">
     </div>
 
     <div fxFlex="100" fxLayout="row wrap" fxLayoutAlign="start stretch" style="margin-top:20px;">
