--- a/ui/src/app/login/components/setup/setup.component.html
+++ b/ui/src/app/login/components/setup/setup.component.html
@@ -21,7 +21,7 @@
         <div fxFlex="100" fxLayout="column" class="box-shadow-login setup-card">
             <form #setupForm="ngForm" fxFlex="100" fxLayout="column">
                 <div class="setup-header p-20">
-                    <img class="sp-logo" alt="icon" src="../../../../assets/img/login/logo.png">
+                    <img class="sp-logo" alt="icon" src="../../../../assets/img/sp/logo.png">
                     <h2 class="text-center">Welcome to {{appConstants.APP_NAME}}!</h2>
                     <span class="text-center">Create a user and you are ready to go (the initial setup might take some time)</span>
                 </div>
