--- a/ui/src/app/login/components/auth-box/auth-box.component.html
+++ b/ui/src/app/login/components/auth-box/auth-box.component.html
@@ -25,7 +25,7 @@
                      style="margin-left:auto;margin-right:auto;">
                     <div fxFlex="60" fxLayoutAlign="center center" fxLayout="row"
                          style="color:white;width:100%;"><img
-                            alt="icon" src="../../../../assets/img/login/logo.png" style="width:100%;">
+                            alt="icon" src="../../../../assets/img/sp/logo.png" style="width:100%;">
                     </div>
                 </div>
                 <ng-content></ng-content>
