--- a/ui/src/app/files/files.component.html
+++ b/ui/src/app/files/files.component.html
@@ -49,7 +49,7 @@
             </div>
         </div>
         <div class="sp-blue-border">
-            <file-overview #fileOverviewComponent></file-overview>
+            <sp-file-overview #fileOverviewComponent></sp-file-overview>
         </div>
     </div>
 </div>
