Use local file reference to platform-service library

--- a/ui/src/app/login/components/startup/startup.component.html
+++ b/ui/src/app/login/components/startup/startup.component.html
@@ -19,7 +19,7 @@
 <div class="md-padding sp-fade" fxLayout="row" fxLayoutAlign="center center"
      style="min-height:100vh !important; background:white;">
     <div fxFlex="80" fxLayout="column" fxLayoutAlign="center center" style="display:flex;">
-        <img src="../../../../assets/img/logo.png" style="max-width:500px;"/>
+        <img src="../../../../assets/img/sp/logo.png" style="max-width:500px;"/>
 
         <div fxFlex="100">
             <h2>Welcome!</h2>
