[STREAMPIPES-494] Do not show pipeline element status in preview mode

--- a/ui/src/app/editor/components/pipeline/pipeline.component.html
+++ b/ui/src/app/editor/components/pipeline/pipeline.component.html
@@ -31,7 +31,7 @@
         </div>
         <div class="pipeline-element-loading-container sp-fade-opacity"
              *ngIf="pipelineElement.settings.loadingStatus"></div>
-        <div class="pipeline-element-configuration-status {{pipelineElement.type === 'stream' ? 'pi-stream' : 'pi-processor'}}">
+        <div class="pipeline-element-configuration-status {{pipelineElement.type === 'stream' ? 'pi-stream' : 'pi-processor'}}" *ngIf="!preview">
             <i class="material-icons pipeline-element-configuration-invalid-icon" *ngIf="pipelineElement.settings.completed === 3">
                 warning
             </i>
