--- a/ui/src/app/dashboard/dialogs/add-widget/add-visualization-dialog.component.html
+++ b/ui/src/app/dashboard/dialogs/add-widget/add-visualization-dialog.component.html
@@ -28,10 +28,10 @@
                                        class="list-item"
                                         [attr.data-cy]="'dashboard-visualize-pipeline-' + pipeline.pipelineName">
                             <div mat-list-avatar
-                                 class="pipeline-avatar sp-accent-bg">{{iconText(pipeline.visualizationName)}}
+                                 class="pipeline-avatar sp-accent-bg">{{iconText(pipeline.measureName)}}
                             </div>
                             <h4 mat-line>{{pipeline.pipelineName}}</h4>
-                            <p mat-line>{{pipeline.visualizationName}} </p>
+                            <p mat-line>{{pipeline.measureName}} </p>
                         </mat-list-item>
                     </mat-list>
                 </div>
@@ -61,7 +61,7 @@
                     <div fxFlex="100" fxLayout="column">
                         <app-static-property *ngFor="let config of selectedWidget.config" [staticProperty]="config"
                                              [staticProperties]="selectedWidget.config"
-                                             [eventSchemas]="[selectedPipeline.schema]"
+                                             [eventSchemas]="[selectedPipeline.eventSchema]"
                                              [fieldName]="config.internalName"
                                              [parentForm]="parentForm">
                         </app-static-property>
