[STREAMPIPES-509] Load notifications over REST instead of websockets

--- a/ui/src/app/core/components/iconbar/iconbar.component.html
+++ b/ui/src/app/core/components/iconbar/iconbar.component.html
@@ -33,8 +33,8 @@
         <button mat-button mat-icon-button class="md-icon-button button-margin-iconbar iconbar-size"
                 (click)="go('notifications')"
                 matTooltip="Notifications" matTooltipPosition="right">
-            <mat-icon [matBadge]="notificationCountService.unreadNotificationCount"
-                      [matBadgeHidden]="notificationCountService.unreadNotificationCount == 0"
+            <mat-icon [matBadge]="unreadNotificationCount"
+                      [matBadgeHidden]="unreadNotificationCount == 0"
                       [ngClass]="'notifications' === activePage ?'sp-navbar-icon-selected' : 'sp-navbar-icon'"
                       data-cy="navigation-icon">chat
 
