--- a/ui/src/app/home/components/status.component.html
+++ b/ui/src/app/home/components/status.component.html
@@ -31,7 +31,7 @@
     </div>
     <div fxFlex="25" class="status-container notifications mr-20" (click)="navigate('notifications')">
         <div fxFill="100" fxLayout="column" fxLayoutAlign="center center">
-            <div class="status-container-number" fxLayoutAlign="start center">{{notificationCountService.unreadNotificationCount}}</div>
+            <div class="status-container-number" fxLayoutAlign="start center">{{unreadNotificationCount}}</div>
             <div class="status-container-text">unread notifications</div>
         </div>
     </div>
